# math

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/stack/math/geom/: point.cc  point.h  polygon.cc  polygon.h  rectangle.cc  rectangle.h  segment.cc  segment.h
